--- a/Media query 6.css
+++ b/Media query 6.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
-@media only screen and (orientation: landscape) {
+@media only screen and (orientation: Landscape) {
     body {
         background-color: aliceblue;
         color: green;
